--- a/.github/workflows/artifacts.yml
+++ b/.github/workflows/artifacts.yml
@@ -74,7 +74,7 @@ jobs:
             ${{ steps.login-ecr.outputs.registry }}
           for image in ${images}; do
             skopeo copy --all --dest-decompress \
-              "oci-archive:/home/runner/work/qos/qos/${image}.oci.x86_64.tar/${image}.oci.x86_64.tar" \
+              "oci-archive:/home/runner/work/qos/qos/${image}.tar/${image}.tar" \
               "docker://${{ steps.login-ecr.outputs.registry }}/tkhq/${image}:sha-${{ github.event_name == 'pull_request' && github.event.pull_request.head.sha || github.sha }}"
             for tag in ${tags}; do
               skopeo copy --all \
