--- a/.github/workflows/artifacts.yml
+++ b/.github/workflows/artifacts.yml
@@ -16,6 +16,12 @@ jobs:
     # This is charged by the minute, so if you want to reduce cost change back to `runs-on: ubuntu-latest`
     runs-on:
       group: ubuntu-runners
+    strategy:
+      matrix:
+        include:
+          - target: qos_client.tar
+          - target: qos_host.tar
+          - target: qos_enclave.tar
     steps:
       - name: Checkout sources
         uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11 # v4.1.1
@@ -24,4 +30,102 @@ jobs:
       - name: Run `make`
         shell: 'script -q -e -c "bash {0}"'
         run: |
-            make -j$(nproc)
+          make out/${{ matrix.target }}
+      - uses: actions/upload-artifact@a8a3f3ad30e3422c9c7b888a15615d19a852ae32 # v3.1.3
+        with:
+          name: ${{ matrix.target }}
+          path: out/${{ matrix.target }}
+          retention-days: 1
+
+  upload_to_ecr:
+    name: Upload toolchain artifacts to ECR
+    # We use a special group that is configured to use github largest runner instance
+    # This is charged by the minute, so if you want to reduce cost change back to `runs-on: ubuntu-latest`
+    runs-on:
+      group: ubuntu-runners
+    needs:
+      - build
+    permissions:
+      id-token: write
+      contents: read
+    steps:
+
+      - name: Configure AWS Credentials
+        uses: aws-actions/configure-aws-credentials@010d0da01d0b5a38af31e9c3470dbfdabdecca3a # v4.0.1
+        with:
+          aws-region: us-east-1
+          role-to-assume: arn:aws:iam::799078726966:role/github-qos
+
+      - name: Login to Amazon ECR
+        id: login-ecr
+        uses: aws-actions/amazon-ecr-login@062b18b96a7aff071d4dc91bc00c4c1a7945b076 # v2.0.1
+
+      - name: Download Artifacts
+        uses: actions/download-artifact@9bc31d5ccc31df68ecc42ccf4149144866c47d8a # v3.0.2
+
+      - name: Upload images to ECR
+        env:
+          images: >-
+            qos_client
+            qos_enclave
+            qos_host
+            enclave_reshard
+          tags: >-
+            ${{ github.ref == format('refs/heads/{0}', 'main') && 'latest' || '' }}
+            ${{ github.event_name == 'pull_request' && format('pr-{0}', github.event.number) || '' }}
+            ${{ github.event_name == 'push' && github.ref_name || '' }}
+        run: |
+          skopeo login \
+            --username "${{ steps.login-ecr.outputs.docker_username_799078726966_dkr_ecr_us_east_1_amazonaws_com }}" \
+            --password "${{ steps.login-ecr.outputs.docker_password_799078726966_dkr_ecr_us_east_1_amazonaws_com }}" \
+            ${{ steps.login-ecr.outputs.registry }}
+          for image in ${images}; do
+            skopeo copy --all --dest-decompress \
+              "oci-archive:/home/runner/work/qos/qos/${image}.tar/${image}.tar" \
+              "docker://${{ steps.login-ecr.outputs.registry }}/tkhq/${image}:sha-${{ github.event_name == 'pull_request' && github.event.pull_request.head.sha || github.sha }}"
+            for tag in ${tags}; do
+              skopeo copy --all \
+                "docker://${{ steps.login-ecr.outputs.registry }}/tkhq/${image}:sha-${{ github.event_name == 'pull_request' && github.event.pull_request.head.sha || github.sha }}" \
+                "docker://${{ steps.login-ecr.outputs.registry }}/tkhq/${image}:${tag}"
+            done
+          done
+
+  upload_to_ghcr:
+    name: Upload toolchain artifacts to GHCR
+    # We use a special group that is configured to use github largest runner instance
+    # This is charged by the minute, so if you want to reduce cost change back to `runs-on: ubuntu-latest`
+    runs-on:
+      group: ubuntu-runners
+    needs:
+      - build
+    permissions:
+      contents: read
+      packages: write
+    steps:
+      - name: Download Artifacts
+        uses: actions/download-artifact@9bc31d5ccc31df68ecc42ccf4149144866c47d8a # v3.0.2
+      - name: Upload images to GHCR
+        env:
+          images: >-
+            qos_client
+            qos_enclave
+            qos_host
+          tags: >-
+            ${{ github.ref == format('refs/heads/{0}', 'main') && 'latest' || '' }}
+            ${{ github.event_name == 'pull_request' && format('pr-{0}', github.event.number) || '' }}
+            ${{ github.event_name == 'push' && github.ref_name || '' }}
+        run: |
+          skopeo login \
+            --username "${{ github.actor }}" \
+            --password "${{ secrets.GITHUB_TOKEN }}" \
+            ghcr.io
+          for image in ${images}; do
+            skopeo copy --all --dest-decompress \
+              "oci-archive:/home/runner/work/qos/qos/${image}.tar/${image}.tar" \
+              "docker://ghcr.io/tkhq/${image}:sha-${{ github.event_name == 'pull_request' && github.event.pull_request.head.sha || github.sha }}"
+            for tag in ${tags}; do
+              skopeo copy --all \
+                "docker://ghcr.io/tkhq/${image}:sha-${{ github.event_name == 'pull_request' && github.event.pull_request.head.sha || github.sha }}" \
+                "docker://ghcr.io/tkhq/${image}:${tag}"
+            done
+          done
