--- a/.github/workflows/artifacts.yml
+++ b/.github/workflows/artifacts.yml
@@ -22,6 +22,10 @@ jobs:
           - target: qos_client.tar
           - target: qos_host.tar
           - target: qos_enclave.tar
+    permissions:
+      id-token: write
+      contents: read
+      packages: write
     steps:
       - name: Checkout sources
         uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11 # v4.1.1
@@ -30,7 +34,9 @@ jobs:
       - name: Run `make`
         shell: 'script -q -e -c "bash {0}"'
         run: |
-          make out/${{ matrix.target }}
+          echo "${{ secrets.GITHUB_TOKEN }}" | docker login ghcr.io -u "${{ github.actor }}" --password-stdin
+
+          make -j$(nproc) out/${{ matrix.target }}
       - uses: actions/upload-artifact@a8a3f3ad30e3422c9c7b888a15615d19a852ae32 # v3.1.3
         with:
           name: ${{ matrix.target }}
