--- a/src/qos_test_primitives/Cargo.toml
+++ b/src/qos_test_primitives/Cargo.toml
@@ -1,9 +1,12 @@
 [package]
 name = "qos_test_primitives"
-version = "0.1.0"
-edition = "2021"
-rust-version = "1.88"
+version.workspace = true
+edition.workspace = true
+rust-version.workspace = true
 publish = false
+
+[lints]
+workspace = true
 
 [dependencies]
 rand = { workspace = true }
