--- a/.github/workflows/stagex.yml
+++ b/.github/workflows/stagex.yml
@@ -12,8 +12,7 @@ on:
 jobs:
   build:
     name: build artifacts
-    runs-on:
-      group: ubicloud-standard-2
+    runs-on: ubicloud-standard-4
     steps:
       - name: Checkout sources
         uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
