--- a/kustomize/components/qos_host/deployment.yaml
+++ b/kustomize/components/qos_host/deployment.yaml
@@ -7,7 +7,7 @@ spec:
     spec:
       containers:
         - name: qos-host
-          image: ghrc.io/tkhq/qos_host
+          image: ghcr.io/tkhq/qos_host
           command:
             - /qos_host
           args:
