--- a/.github/workflows/stagex.yml
+++ b/.github/workflows/stagex.yml
@@ -10,18 +10,49 @@ on:
   workflow_dispatch: # Allows manual invocation
 
 jobs:
-  build:
-    name: build artifacts
+  images:
+    name: Build and push images
     # We use a special group that is configured to use github largest runner instance
     # This is charged by the minute, so if you want to reduce cost change back to `runs-on: ubuntu-latest`
     runs-on:
       group: ubuntu-runners
+    timeout-minutes: 60
+    permissions:
+      id-token: write
+      contents: read
+      packages: write
+    env:
+      tags: >-
+        ${{ github.ref == format('refs/heads/{0}', 'main') && 'latest' || '' }}
+        ${{ github.event_name == 'pull_request' && format('pr-{0}', github.event.number) || '' }}
+        ${{ github.event_name == 'push' && github.ref_name || '' }}
+    strategy:
+      matrix:
+        target:
+          - name: reshard_app
+          - name: reshard_host
     steps:
       - name: Checkout sources
         uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
-      - name: Setup Docker
+
+      - name: Docker setup
         uses: ./.github/actions/docker-setup
-      - name: Run `make`
-        shell: 'script -q -e -c "bash {0}"'
+        with:
+          ghcr: ${{ secrets.GITHUB_TOKEN }}
+    
+      - name: Build ${{ matrix.target.name }}
+        uses: ./.github/actions/stagex-pkg
+        with:
+          name: ${{ matrix.target.name }}
+
+      - name: Load artifact to Docker
         run: |
-            make -j$(nproc)
+          env -C out/${{ matrix.target.name }} tar -cf - . | docker load
+      
+      - name: Upload to GHCR
+        run: |
+          docker images
+          for tag in ${tags}; do
+              docker tag "qos-local/${{ matrix.target.name }}:latest" "ghcr.io/tkhq/${{ matrix.target.name }}:${tag}"
+          done
+          docker image push --all-tags "ghcr.io/tkhq/${{ matrix.target.name }}"
